# FundamentalCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ConsoleApplication1/: ConsoleApplication1.cpp  chapter2.cpp  main.cpp  storage_A.cpp  storage_B.cpp  storage_main.cpp
chapter1/: A.cpp  AA.cpp  BB.cpp  CMakeLists.txt  chapter1.cpp
chapter1/Type_code/: main.cpp
chapter2/: A.cpp  AA.cpp  BB.cpp  CMakeLists.txt  chapter2.cpp  main.cpp  storage_A.cpp  storage_main.cpp
chapter2/class_def/: A.cpp  CMakeLists.txt  Main.cpp
chapter2/extern_static/: A.cpp  CMakeLists.txt  Main.cpp
chapter2/static_val/: A.cpp  B.cpp  CMakeLists.txt  Main.cpp
chapter3/: ANSI.cpp  CMakeLists.txt  Common.h  Link_A.cpp  Link_A.h  Link_B.cpp  Macro.h  Trace.h  main.cpp  preprocesser.cpp  system_platform.cpp  system_platform.h
chapter3/include/: Common.h  Macro.h  link_A.h  link_A2.h  macro_A.h
chapter3/link_error/: A.cpp  CMakeLists.txt  main.cpp  main2.cpp
chapter3/macro/: CMakeLists.txt  main.cpp
chapter3/preprocess/: A.cpp  B.cpp  CMakeLists.txt
chapter3/preprocess/src/: B.cpp  CMakeLists.txt
chapter4/: Alloc.cpp  CMakeLists.txt  l_value.cpp  new_delete.h  placement_new.cpp  readme.md
chapter4/MemoryBlock/: CMakeLists.txt  Memoryblock.cpp  readme.md
chapter4/basic/: CMakeLists.txt  alloc.cpp  delete_example.cpp
chapter4/placement_new/: CMakeLists.txt  placement_new.cpp
chapter5/: CMakeLists.txt  array.cpp  array_parameter.cpp  readme.md  vector.cpp
chapter5/Allarray/: CMakeLists.txt  array.cpp  readme.md
chapter5/PointerArray/: CMakeLists.txt  PointerArr.cpp
chapter5/Typemark/: pointer.cpp  typemark.cpp
chapter5/VLA/: CMakeLists.txt  vla.cpp
chapter6/: CMakeLists.txt  class_struct.cpp  copy_constructor.cpp  copy_operator.cpp  inheritance.cpp  initialize_list.cpp  new_delete.cpp  order_class.cpp  readme.md  rvalue_reference.cpp  type_conversion.cpp
chapter6/classtypeconversion/: CMakeLists.txt  classconversionvirtual.cpp  classtypeconversion.cpp  classtypeconversion2.cpp  classtypeconversion3.cpp  classtypeconversion4.cpp  classtypeconversion5.cpp  main.cpp
chapter6/cons/: CMakeLists.txt  ImplConstructor.cpp  ImplDestructor.cpp  call.cpp  readme.md
chapter6/copyoperation/: CMakeLists.txt  copy.cpp  noncopyable.cpp  readme.md  rvalueRef.cpp
chapter6/dynamiccast/: CMakeLists.txt  dynamiccast2.cpp  main.cpp
chapter6/inheritane/: CMakeLists.txt  friend.cpp  main.cpp
chapter6/initialzieList/: CMakeLists.txt  initialzieList.cpp
chapter6/member/: CMakeLists.txt  class_struct.cpp  empty.cpp
chapter6/multiinheritance/: CMakeLists.txt  main.cpp
chapter6/typeconversionoperator/: CMakeLists.txt  typeconversionoperator.cpp
chapter6/virtualinheritance/: readme.md
chapter7/: CMakeLists.txt  readme.md
chapter7/callby/: CMakeLists.txt  main.cpp
chapter7/classMemberFunctoin/: CMakeLists.txt  main.cpp
chapter7/externC/: CMakeLists.txt  Test1.c  Test2.cpp  readme.md
chapter7/functor/: CMakeLists.txt  main.cpp
chapter7/lambda/: CLambda.cpp  CMakeLists.txt  main.cpp  test.cpp
chapter7/returnType/: CMakeLists.txt  main.cpp  returnType.cpp
chapter7/variableArg/: CMakeLists.txt  main.cpp
chapter8/: CMakeLists.txt
chapter8/basic/: CMakeLists.txt  main.cpp  readme.md
chapter8/inheritanceVirtual/: CMakeLists.txt  inheritanceVirtual.cpp
chapter8/multiinheritvirtual/: CMakeLists.txt  multiinheritvirtual.cpp  readme.md
chapter8/purevirtual/: CMakeLists.txt  foo.cpp  purevirtual.cpp
chapter8/this/: CMakeLists.txt  readme.md  this.cpp
chapter8/vconsdes/: CMakeLists.txt  vconsdes.cpp
chapter8/vfuncCall/: CMakeLists.txt  vfuncCall.cpp
chapter8/virtualinheritance/: readme.md
chapter9/: CMakeLists.txt
chapter9/FPtypedef/: CMakeLists.txt  fp.cpp  memberFunc.cpp  sizeOfFp.cpp  thisWithFp.cpp
cmake/: MultiTarget.cmake  SuperBuild.cmake  Warning.cmake
include/chapter3/: macro_A.h  macro_B.h
include/chapter6/: member.h
include/chapter6/classtypeconversion/: classconversion.h  classconversionmulti.h  classconversionvirtual.h  classiinheritance.h  classtest.h
include/chapter6/cons/: call.h  call2.h  call3.h
include/chapter6/copyoperation/: copy.h  copy2.h  copy3.h  equal.h  noncopyable.h  rvalueRef.h
include/chapter6/dynamiccast/: dynamiccast.h  dynamiccast2.h
include/chapter6/inheritance/: basicmember.h  friend.h  staticmember.h
include/chapter6/initializeList/: Cp.h  Init.h  Init2.h  InitMember.h  InitRef.h  initializatioinList.h  initializatioinList2.h
include/chapter6/multiinheritance/: diamond.h  multiinheritance.h  virtualbaseclass.h
include/chapter6/virtualinheritance/: vptr.h  vptr2.h  vptr3.h  vptr4.h
include/chapter7/callby/: callref.h  callvalue.h
include/chapter7/externC/: externC.h
include/chapter7/lambda/: CFunction.h  lambda.h
include/chapter7/memberfunc/: memberfunc.h
include/chapter7/returnType/: returnType.h
include/chapter8/: animal.h
include/chapter8/inheritanceVitrual/: inheritanceVitrual.h
include/chapter8/multiinheritvirtual/: multiinheritvirtual.h
include/chapter8/purevirtual/: foo.h  purevirtual.h
include/chapter8/this/: this.h  thunk.h
include/chapter8/vconsdes/: vconsdes.h
include/chapter8/vfuncCall/: vfuncCall.h
tests/: CMakeLists.txt  test.cpp  test.h
tests/chapter4/: CMakeLists.txt  Testplacementnew.cpp
tests/chapter5/: CMakeLists.txt  chapter5.cpp
tests/chapter5/include/: chapter5.h
